<?xml version="1.0" encoding="utf-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:id="@+id/myScroll">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="8dp"
        android:paddingLeft="8dp"
        android:orientation="vertical"
        android:id="@+id/homeGroup"
        tools:context="com.example.android.ScienceQuiz.MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#004D40"
            android:text="@string/quiz_title"/>


            <ImageView
                android:id="@+id/lightbulb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/lightoff"
                android:layout_gravity="center_horizontal"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:textSize="20sp"
            android:text="@string/question1"/>

        <EditText
            android:id="@+id/quiz_answer_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textSize="16sp"
            android:focusableInTouchMode="true"
            android:hint="@string/answer_hint"/>

        <TextView
            android:id="@+id/answer1"
            android:layout_marginLeft="16dp"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_empty"/>

        <TextView
            android:id="@+id/question_2_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:textSize="20sp"
            android:text="@string/question2"/>

            <CheckBox
                android:id="@+id/quiz_answer_2a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:paddingLeft="16dp"
                android:textSize="16sp"
                android:text="@string/question2a"
                />

            <CheckBox
                android:id="@+id/quiz_answer_2d"
                android:layout_width="wrap_content"
                android:layout_marginLeft="16dp"
                android:paddingLeft="16dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/question2d"
                />
            <CheckBox
                android:id="@+id/quiz_answer_2b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:paddingLeft="16dp"
                android:textSize="16sp"
                android:text="@string/question2b"
                />

            <CheckBox
                android:id="@+id/quiz_answer_2e"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:paddingLeft="16dp"
                android:textSize="16sp"
                android:text="@string/question2e"
                />
            <CheckBox
                android:id="@+id/quiz_answer_2c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:paddingLeft="16dp"
                android:textSize="16sp"
                android:text="@string/question2c"
                />
        <TextView
            android:id="@+id/answer2"
            android:layout_marginLeft="16dp"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_empty"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:textSize="20sp"
            android:text="@string/question3"/>

        <EditText
            android:id="@+id/quiz_answer_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textSize="16sp"
            android:focusableInTouchMode="true"
            android:hint="@string/answer_hint"/>

        <TextView
            android:id="@+id/answer3"
            android:layout_marginLeft="16dp"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_empty"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:textSize="20sp"
            android:text="@string/question4"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/question_4_group">

            <RadioButton
                android:id="@+id/quiz_answer_4a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:paddingLeft="8dp"
                android:textSize="16sp"
                android:text="@string/question4a"/>

            <RadioButton
                android:id="@+id/quiz_answer_4b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:paddingLeft="8dp"
                android:textSize="16sp"
                android:text="@string/question4b"/>

            <RadioButton
                android:id="@+id/quiz_answer_4c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:paddingLeft="8dp"
                android:textSize="16sp"
                android:text="@string/question4c"/>

            <RadioButton
                android:id="@+id/quiz_answer_4d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:paddingLeft="8dp"
                android:textSize="16sp"
                android:text="@string/question4d"/>

        </RadioGroup>
        <TextView
            android:id="@+id/answer4"
            android:layout_marginLeft="16dp"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_empty"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:textSize="20sp"
            android:text="@string/question5"/>

        <EditText
            android:id="@+id/quiz_answer_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textSize="16sp"
            android:focusableInTouchMode="true"
            android:hint="@string/answer_hint"/>

        <TextView
            android:id="@+id/answer5"
            android:layout_marginLeft="16dp"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_empty"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:paddingTop="16dp"
            android:text="@string/question6"/>

        <RadioGroup
            android:id="@+id/question_6_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/quiz_answer_6a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:paddingLeft="8dp"
                android:textSize="16sp"
                android:text="@string/question6a"/>

            <RadioButton
                android:id="@+id/quiz_answer_6b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:paddingLeft="8dp"
                android:textSize="16sp"
                android:text="@string/question6b"/>
        </RadioGroup>

        <TextView
            android:id="@+id/answer6"
            android:layout_marginLeft="16dp"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_empty"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text = "@string/submit"
                android:layout_gravity="center_horizontal"
                android:onClick="checkAnswers"/>

            <Button
                android:id="@+id/reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:text = "@string/reset"/>

        </LinearLayout>

        <TextView
            android:id="@+id/Total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/total_empty"/>

    </LinearLayout>
</ScrollView>